C++II/.metadata/.plugins/org.eclipse.cdt.ui/9-16WorkingWithC-Type_Strings.build.log
15:05:49 **** Incremental Build of configuration Debug for project 9-16WorkingWithC-Type_Strings ****
make all 
Building file: ../src/9-16WorkingWithC-Type_Strings.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/9-16WorkingWithC-Type_Strings.d" -MT"src/9-16WorkingWithC-Type_Strings.o" -o "src/9-16WorkingWithC-Type_Strings.o" "../src/9-16WorkingWithC-Type_Strings.cpp"
../src/9-16WorkingWithC-Type_Strings.cpp: In function ‘int main()’:
../src/9-16WorkingWithC-Type_Strings.cpp:25:25: error: expected primary-expression before ‘)’ token
  if (strcmp (Str2, Str3,) < 0)   // strcmp compares ASCII codes for the characters (ie. uppercase ABCD, comes before lowercase abcd)
                         ^
../src/9-16WorkingWithC-Type_Strings.cpp:30:26: error: expected primary-expression before ‘)’ token
  if (strcmpi (Str3, Str4,) < 0) // strcmpi compares the case(upper or lower in visual studio
                          ^
../src/9-16WorkingWithC-Type_Strings.cpp:30:26: error: ‘strcmpi’ was not declared in this scope
../src/9-16WorkingWithC-Type_Strings.cpp:44:24: error: too many arguments to function ‘char* strcpy(char*, const char*)’
   strcpy (Str2, Str4, 3); // copies the characters from Str2 into Str1 and copies them, then copies three characters
                        ^
In file included from ../src/9-16WorkingWithC-Type_Strings.cpp:11:0:
/usr/include/string.h:129:14: note: declared here
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^
../src/9-16WorkingWithC-Type_Strings.cpp:18:7: warning: unused variable ‘Str5’ [-Wunused-variable]
  char Str5 [31] = "MILLIE";
       ^
make: *** [src/9-16WorkingWithC-Type_Strings.o] Error 1

15:05:50 Build Finished (took 287ms)

